@@ -1,8 +1,14 @@
+2008-11-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ipentry.tcl:  Use the ttk::entry border if ttk available
+	* ipentry.man:  Document -themed 0 to disable themed look
+	* pkgIndex.tcl: Incremented version to 0.3
+
 2006-07-14 Aaron Faupell <afaupell@users.sourceforge.net>
 
 	* ipentry.tcl: added -textvariable option, and bumped version
 	* ipentry.man: added docs for -textvariable option
-	* thanks to Chris Maj for the patch
+	thanks to Chris Maj for the patch
 
 2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
